--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,8 @@
 name: flutter_joybuttons
 description: Virtual buttons for Flutter touchscreen applications. Flexible and customizable.
-version: 0.0.1
+version: 1.0.0
 homepage: https://github.com/cybaker/flutter_joybuttons
-repository: https://github.com/pavelzaichyk/flutter_joybuttons
-funding:
-  - https://paypal.me/pavelzaichyk
-  - https://buymeacoffee.com/rebeloid
-  - https://paypal.com/donate/?hosted_button_id=EG9DHRCSB5MY4
+repository: https://github.com/cybaker/flutter_joybuttons
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -18,6 +14,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
+
+  flutter_lints: ^2.0.1
+  test: ^1.21.1
 
 flutter:
+  uses-material-design: true
