--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,4 +17,5 @@ jobs:
       - run: flutter test
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
-          baseHref: /flutter_joybuttons/example/
+          baseHref: /flutter_joybuttons/
+          workingDir: example
