--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,8 +1,11 @@
-name: Publish to GitHub Pages
+name: Publish to GitHub Pages and pub.dev
 
 on:
   push:
     branches: [ main ]
+    tags:
+      # For pub.dev publishing. Must align with the tag-pattern configured on pub.dev
+      - 'v[0-9]+.[0-9]+.[0-9]+*' # tag-pattern on pub.dev: 'v'
 
 jobs:
   build:
@@ -19,3 +22,7 @@ jobs:
         with:
           baseHref: /flutter_joybuttons/
           workingDir: example
+
+  publish:
+    # For pub.dev publishing.
+    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
