Fix publish section 4

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -38,5 +38,4 @@ jobs:
     name: Publish to pub.dev
     needs: [build]
     runs-on: ubuntu-latest
-    steps:
-      - uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
