--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,10 +32,9 @@ jobs:
           baseHref: /flutter_joybuttons/
           workingDir: example
 
-      - name: Update pub.dev release
-
   publish:
     name: Publish to pub.dev
     needs: [build]
     runs-on: ubuntu-latest
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+    steps:
+      - uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
