--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,9 +32,5 @@ jobs:
           baseHref: /flutter_joybuttons/
           workingDir: example
 
-  publish:
-    name: Publish to pub.dev
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
+      - name: Publish to pub.dev
       - uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
