--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Install Flutter
       - uses: subosito/flutter-action@v2
@@ -31,3 +31,10 @@ jobs:
         with:
           baseHref: /flutter_joybuttons/
           workingDir: example
+
+  publish:
+    name: Publish to pub.dev
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: dart-lang/setup-dart/.github/workflows/publish.yml@main
